# saturday-testgen

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json  view_graph.py
constraint-examples/: cons1.c  cons2.c  cons3.c  cons4.c  cons5.c  cons_complex.c  free_array.c  ndim_array.c  simple_val.c
docs/: b.bib  bilingual-bibliography.typ  gb-7714-2015-numeric.csl  new基于SMT求解和变量级变异的约束用例生成器.typ  ori-xjle.typ  slide.typ  template.typ  基于SMT求解和变量级变异的约束用例生成器.typ
gram/: C.g4
src/: cmdline.h  main.cpp  parser.cpp  parser.hpp  utils.cpp  utils.hpp
